clusters/cluster/apps/monitoring/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-public
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "10000"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - status.neuland.app
      secretName: monitoring-tls
  rules:
    - host: status.neuland.app
      http:
        paths:
          - path: /status/app
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /api/status-page
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /api/badge
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /upload/logo1.png
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /manifest.json
            pathType: Exact
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /favicon.ico
            pathType: Exact
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /apple-touch-icon.png
            pathType: Exact
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /apple-touch-icon-precomposed.png
            pathType: Exact
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
          - path: /icon.svg
            pathType: Exact
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-auth
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - status.neuland.app
      secretName: monitoring-tls
  rules:
    - host: status.neuland.app
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-secured
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - status.neuland.app
      secretName: monitoring-tls
  rules:
    - host: status.neuland.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
